--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,19 @@ server.port=2024
 
 #Datasource or Connection Properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jfsdproject1
+spring.datasource.url=jdbc:mysql://localhost:3306/jfsdproject
 spring.datasource.username=root
 spring.datasource.password=Root
+
+
+
 #Spring Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
 #View Resolver
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
